--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,17 @@
         <java.version>11</java.version>
     </properties>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://localhost:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>maven-releases</id>
+            <url>http://localhost:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
 
         <!--Hibernate 5-->
