--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
     <distributionManagement>
         <snapshotRepository>
             <id>maven-snapshots</id>
-            <url>http://localhost:8081/repository/maven-snapshots/</url>
+            <url>http://172.17.0.3:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
         <repository>
             <id>maven-releases</id>
-            <url>http://localhost:8081/repository/maven-releases/</url>
+            <url>http://172.17.0.3:8081/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
 
